지표값 오차 거의 없음